fix: Fix styles on mobile
The override styles weren't working well on mobile, so they were modified

--- a/src/app/components/SolanaWallet/index.css
+++ b/src/app/components/SolanaWallet/index.css
@@ -1,6 +1,6 @@
 /* Override Solana wallet adapter modal styles */
 .wallet-adapter-modal-wrapper {
-  @apply bg-black-main/10 backdrop-blur-lg fixed inset-0 z-50 transition-all duration-100 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 h-fit font-[inherit] whitespace-nowrap;
+  @apply bg-black-main/10 backdrop-blur-lg transition-all duration-100 font-[inherit];
 }
 
 .wallet-adapter-modal-title {
